github repo fetch changed to pinned repos only