@@ -2,13 +2,13 @@ package com.vasubhakt.DevAllProjectService.Fetch;
 
 import java.time.LocalDate;
 import java.time.ZoneOffset;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpEntity;
@@ -51,9 +51,8 @@ public class GitHubFetch {
             CompletableFuture<Map<?, ?>> profileFuture = CompletableFuture
                     .supplyAsync(() -> restTemplate.getForObject(BASE_URL + username, Map.class), executor);
 
-            CompletableFuture<List<Map<?, ?>>> repoFuture = CompletableFuture.supplyAsync(
-                    () -> restTemplate.getForObject(BASE_URL + username + "/repos?per_page=6&sort=updated", List.class),
-                    executor);
+            CompletableFuture<List<Map<String, Object>>> repoFuture = CompletableFuture
+                    .supplyAsync(() -> fetchPinnedRepos(username), executor);
 
             CompletableFuture<Map<String, Integer>> contribFuture = CompletableFuture
                     .supplyAsync(() -> fetchContributionHeatmap(username), executor);
@@ -70,28 +69,30 @@ public class GitHubFetch {
             String avatarUrl = (String) profile.get("avatar_url");
             String profileUrl = (String) profile.get("html_url");
 
-            // repos data
-            List<Map<?, ?>> repoList = repoFuture.get();
-            List<GitHubRepo> repos = repoList.stream().limit(6).map(r -> {
+            List<Map<String, Object>> pinnedRepos = repoFuture.get();
+
+            List<GitHubRepo> repos = pinnedRepos.stream().map(r -> {
                 String repoName = (String) r.get("name");
-                String fullName = (String) r.get("full_name");
+                String fullName = username + "/" + repoName; // Pinned repos do not return full_name
                 String description = (String) r.get("description");
-                Integer stars = r.get("stargazers_count") instanceof Number
-                        ? ((Number) r.get("stargazers_count")).intValue()
-                        : 0;
-                Integer forks = r.get("forks_count") instanceof Number ? ((Number) r.get("forks_count")).intValue() : 0;
-                Integer watchers = r.get("watchers_count") instanceof Number
-                        ? ((Number) r.get("watchers_count")).intValue()
-                        : 0;
-                String license = r.get("license") != null ? ((Map<?, ?>) r.get("license")).get("name").toString()
-                        : null;
-                String repoUrl = (String) r.get("html_url");
-                List<String> topics = r.get("topics") != null ? (List<String>) r.get("topics") : List.of();
+                Integer stars = (Integer) r.get("stargazerCount");
+                Integer forks = (Integer) r.get("forkCount");
+                String license = (String) r.get("license");
+                String repoUrl = (String) r.get("url");
+                List<String> topics = (List<String>) r.get("topics");
                 Map<String, Integer> languageStats = fetchLanguages(fullName);
 
-                return new GitHubRepo(repoName, fullName, description, stars, forks, watchers, license, repoUrl, topics,
+                return new GitHubRepo(
+                        repoName,
+                        fullName,
+                        description,
+                        stars,
+                        forks,
+                        license,
+                        repoUrl,
+                        topics,
                         languageStats);
-            }).collect(Collectors.toList());
+            }).toList();
 
             Map<String, Integer> heatMap = contribFuture.get();
 
@@ -148,6 +149,76 @@ public class GitHubFetch {
         } catch (Exception e) {
             log.error("Error fetching contribution heatmap: {}", e.getMessage());
             return Map.of();
+        }
+    }
+
+    private List<Map<String, Object>> fetchPinnedRepos(String username) {
+        try {
+            String query = """
+                    {
+                      user(login: "%s") {
+                        pinnedItems(first: 6, types: REPOSITORY) {
+                          nodes {
+                            ... on Repository {
+                              name
+                              description
+                              url
+                              stargazerCount
+                              forkCount
+                              licenseInfo { name }
+                              repositoryTopics(first: 10) {
+                                nodes {
+                                  topic { name }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                    """.formatted(username);
+
+            String json = """
+                    {
+                      "query": "%s"
+                    }
+                    """.formatted(query.replace("\"", "\\\"").replace("\n", " ")); 
+
+            HttpHeaders headers = new HttpHeaders();
+            headers.setContentType(MediaType.APPLICATION_JSON);
+            headers.setBearerAuth(TOKEN);
+
+            HttpEntity<String> req = new HttpEntity<>(json, headers);
+            String res = restTemplate.postForObject(GRAPHQL_URL, req, String.class);
+
+            JsonNode root = MAPPER.readTree(res)
+                    .path("data").path("user").path("pinnedItems").path("nodes");
+
+            List<Map<String, Object>> list = new ArrayList<>();
+
+            for (JsonNode node : root) {
+                Map<String, Object> map = new HashMap<>();
+                map.put("name", node.path("name").asText());
+                map.put("description", node.path("description").asText());
+                map.put("url", node.path("url").asText());
+                map.put("stargazerCount", node.path("stargazerCount").asInt());
+                map.put("forkCount", node.path("forkCount").asInt());
+                map.put("license", node.path("licenseInfo").path("name").asText(null));
+
+                List<String> topics = new ArrayList<>();
+                for (JsonNode t : node.path("repositoryTopics").path("nodes")) {
+                    topics.add(t.path("topic").path("name").asText());
+                }
+                map.put("topics", topics);
+
+                list.add(map);
+            }
+
+            return list;
+
+        } catch (Exception e) {
+            log.error("Pinned repo fetch error: {}", e.getMessage());
+            return List.of();
         }
     }
 
